--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,54 @@
         "destination": "/dashboard.html"
       },
       {
+        "source": "/dashboard/:moduleId",
+        "destination": "/dashboard/:moduleId.html"
+      },
+      {
+        "source": "/learning",
+        "destination": "/learning.html"
+      },
+      {
+        "source": "/learning/:courseId/:moduleId",
+        "destination": "/learning/:courseId/:moduleId.html"
+      },
+      {
+        "source": "/simulator",
+        "destination": "/simulator.html"
+      },
+      {
+        "source": "/projects",
+        "destination": "/projects.html"
+      },
+      {
+        "source": "/mentor",
+        "destination": "/mentor.html"
+      },
+      {
+        "source": "/leaderboard",
+        "destination": "/leaderboard.html"
+      },
+      {
+        "source": "/certificates",
+        "destination": "/certificates.html"
+      },
+      {
+        "source": "/practice-tests",
+        "destination": "/practice-tests.html"
+      },
+      {
+        "source": "/resume-builder",
+        "destination": "/resume-builder.html"
+      },
+      {
+        "source": "/api-integration",
+        "destination": "/api-integration.html"
+      },
+      {
+        "source": "/admin",
+        "destination": "/admin.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
